--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Check</h1>
-    <img src="/recipes-home.jpg" alt="" width="100%" />
+    <img src="recipes-home.jpg" alt="" width="100%" />
     <ul>
       <li><a href="recipes/chai.html">Chai</a></li>
     </ul>
