--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Chai</h1>
-    <img src="imgs/chai.jpg" alt="chai" width="100%" />
+    <img src="../imgs/chai.jpg" alt="chai" width="100%" />
   </body>
 </html>
